# Astrum2

./: CMakeLists.txt
lib/: CMakeLists.txt
res/: Voxel.frag  Voxel.vert
src/: engine.cpp  engine.hpp  main.cpp
src/common/: quaternion_utils.cpp  shader.cpp
src/components/: component.hpp  mesh.hpp  player.hpp  transform.hpp
src/systems/: controls.cpp  controls.hpp  render.cpp  render.hpp  system.hpp  terrain.cpp  terrain.hpp
